<resources>
        <string name="app_name">Eyetify</string>
        <string name="signup">Create Account</string>
        <string name="login">Already Have an Account</string>
        <string name="message_welcome_page">Lorem ipsum dolor sit amet consectetur. Ac non sed mauris in. Arcu lacus felis in urna turpis arcu sapien lacus </string>
        <string name="title_welcome_page">Your Health &amp; Wellness On-Demand</string>
        <string name="title_signup_page">Create Account</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="message_login_page">Start using by logging into your account</string>
        <string name="title_login_page">Login Account</string>
        <string name="name">Username</string>
        <string name="message_main_page">Welcome to Dicoding.</string>
        <string name="greeting">Hello %1$s,</string>
        <string name="logout">Logout</string>
        <string name="message_signup_page">Get started with creating your account on Eyetify</string>
        <string name="confirm_password">Confirm Password</string>
        <string name="invalid_email">Invalid Email</string>
        <string name="error_password_too_short">Password cannot be less than 8 characters!</string>
        <string name="login_button">Login</string>
        <string name="setting">Settings</string>
        <string name="profil">Profile</string>
        <string name="akun">Account</string>
        <string name="other_method">Or using another method</string>
        <string name="sample_desc">"Lorem ipsum dolor sit amet consectetur. Ac non sed mauris \nin. Arcu lacus felis in urna turpis arcu sapien lacus "</string>
        <string name="motto"><![CDATA[Your Health & Wellness On-Demand]]></string>
        <string name="button_account">Create Account</string>
        <string name="have_account">Already Have an Account</string>
        <string name="title_page_result">Result</string>
        <string name="prediction">Prediction</string>
        <string name="result">result score</string>
        <string name="article">Related Article</string>
        <string name="photo">Image</string>
        <string name="upload_file">Upload File</string>
        <string name="desc_upload_file">Browse and Select File That You \n Choose to Upload</string>
        <string name="history">History</string>
        <string name="home">Home</string>
        <string name="profile">Profile</string>
        <string name="sample_name">Raihan Fathurrahman</string>
        <string name="sample_email">raihan@gmail.com</string>
        <string name="my_profile">My Profile</string>
        <string name="account">Account</string>
        <string name="icon_upload">Upload Icon</string>
        <string name="icon_analyze">Analyze Icon</string>
        <string name="sample_title_news">Easy Ways to Take Care of Your Eyes \nEveryday</string>
        <string name="scan">Scan</string>
        <string name="ensiklopedia">Encyclopedia</string>
        <string name="error_password_mismatch">Passwords do not match</string>
        <string name="indikasi">Common Symptoms</string>
        <string name="penyebab">Causes and Risk Factors</string>
        <string name="pengobatan">Treatment and Prevention</string>
        <string name="realtime_duration_text">Realtime Phone Duration</string>
        <string name="title_duration_phone">Usage Duration</string>
        <string name="text_duration_phone">12 Hours</string>
        <string name="result_status_phone">Safe</string>
        <string name="detail">See Details</string>
        <string name="text_with_bullet"> \u2022 Status</string>
        <string name="Gallery">Gallery</string>
        <string name="Camera">Camera</string>
        <string name="upload_image">Upload Image</string>
        <string name="desc_upload_image">Use Camera Or Gallery to \nPick Image</string>
        <string name="published_date">Published Date</string>
        <string name="Berikan_Rating">"Give Rating "</string>
        <string name="Syarat_dan_Ketentuan">Terms and Conditions</string>
        <string name="kebijakan">Privacy Policy</string>
        <string name="close">Close</string>
        <string name="title_reset_password_page">Reset Password</string>
        <string name="reset_password_button">Send</string>
        <string name="congrats">Congratulations</string>
        <string name="message_succes_activation">Account has been registered \n Check Your Email to Activate Your Account</string>
        <string name="lets_started_message">Let\'s Get Started</string>
        <string name="username_not_found">Username not found</string>
        <string name="email_not_found">Email not found</string>
        <string name="empty_image_warning">Image is Null</string>
        <string name="cancel">Cancel</string>
        <string name="ya">Yes</string>
        <string name="enter_your_email">Enter your email</string>
        <string name="enter_your_username">Enter your username</string>
        <string name="confirm_your_password">Confirm your password</string>
        <string name="enter_your_password">Enter your password</string>
        <string name="language">Language</string>
        <string name="about_eyetify">Eyetify is an application that facilitates early detection of eye diseases through the use of gallery and camera for everyone.</string>
        <string name="privacy_msg">Welcome to Eyetify! We are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and protect your personal information when you use the Eyetify application. We periodically revise this Privacy Policy to ensure that we always comply with applicable data protection regulations.</string>
        <string name="title_privacy">Privacy Policy</string>
        <string name="title_privacy1">Information We Collect</string>
        <string name="title_privacy2">How We Use Your Information</string>
        <string name="title_privacy3">Protecting Your Data</string>
        <string name="title_privacy4">Contact Us</string>
        <string name="text_privacy1">We may collect personal information such as your name, email address, and other contact information when you register or use our services. We may also collect non-personal technical information, such as your device type and app usage statistics.</string>
        <string name="text_privacy2">The information we collect is used to provide our services, understand your needs and preferences, improve our products and services, and for legal compliance purposes.</string>
        <string name="text_privacy3">We take appropriate security measures to protect your personal information from unauthorized access, unauthorized use, modification, and unauthorized disclosure.</string>
        <string name="text_privacy4">If you have any questions or concerns about our Privacy Policy, please contact us at the email or phone number below.</string>
        <string name="title_requirement">Terms and Conditions</string>
        <string name="requirement_msg">Welcome to Eyetify! Please read the terms and conditions of using this application carefully before you use our services.</string>
        <string name="title_requirement1">1. Acceptance of Terms and Conditions</string>
        <string name="title_requirement2">2. Services</string>
        <string name="title_requirement3">3. Privacy Policy</string>
        <string name="title_requirement4">4. Terms of Use</string>
        <string name="title_requirement5">5. Changes to Terms and Conditions</string>
        <string name="title_requirement6">6. Questions and Contact</string>
        <string name="text_requirement1">1.1. By downloading, installing, or using the Eyetify application, you are deemed to have read, understood, and agreed to these terms and conditions.\n1.2. If you do not agree to these terms and conditions, you are not allowed to use the Eyetify application.</string>
        <string name="text_requirement2">2.1. Eyetify provides services to search and store images based on visual recognition.\n2.2. We reserve the right to modify, suspend, or discontinue our services without prior notice.</string>
        <string name="text_requirement3">3.1. The personal information you provide to us will be managed in accordance with our privacy policy.\n3.2. We are not responsible for the use of data you provide to third parties.</string>
        <string name="text_requirement4">4.1. You are responsible for using the Eyetify application and complying with all applicable laws.\n4.2. The use of this application must comply with applicable guidelines and ethics.</string>
        <string name="text_requirement5">5.1. We may change these terms and conditions from time to time without prior notice.\n5.2. Changes will be effective after we update the terms and conditions within the application.</string>
        <string name="text_requirement6">6.1. If you have any questions or comments about these terms and conditions, please contact us below.</string>
        <string name="phone">Phone</string>
        <string name="suggestion">Suggestion</string>
        <string name="gadget_usage_this_week">Gadget usage this week</string>
        <string name="eye_health_tips">Eye Health Tips</string>
    <string name="popular_article">Popular Article</string>
    <string name="desc_welcome">See The World in all its clarity</string>
    <string name="about_us">About Us</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="search_article_hint">Search articles…</string>
    <string name="safe">Safe</string>
    <string name="warning">Warning</string>
    <string name="danger">OverTime</string>
    <string name="welcome_msg">Welcome to \nEyeTify</string>
    <string name="image_validation">Make Sure Your Image Is Clear</string>
    <string name="maximum_duration">Maximum Duration</string>
    <string name="duration_remaining">Duration Remaining</string>
    <string name="articles">Article</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="message_reset_password">Enter your registered email address to receive a password reset link</string>
    <string name="forgot_password">Forgot Password?</string>
    <string-array name="data_name">
        <item>Cataract</item>
        <item>Glaucoma</item>
        <item>Conjunctivitis</item>
        <item>Uveitis</item>
        <item>Hordeolum</item>
        <item>Exophthalmos</item>
    </string-array>
</resources>