<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_history"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/photo"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/sampleresult"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"/>

        <TextView
            android:id="@+id/tv_history_result"
            android:fontFamily="@font/bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:maxLines="2"
            android:textSize="12sp"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_history"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sample_title_news" />

        <TextView
            android:id="@+id/tv_history_suggestion"
            android:fontFamily="@font/regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:maxLines="3"
            android:textSize="11sp"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_history"
            app:layout_constraintTop_toBottomOf="@id/tv_history_result"
            android:text="@string/sample_desc" />

        <TextView
            android:id="@+id/tv_item_published_date"
            android:fontFamily="@font/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:textSize="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_history_suggestion"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/published_date"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>